[package]
authors = ["Andy Lok <andylokandy@hotmail.com>"]
edition = "2018"
name = "tikv-client"
version = "0.0.3"

[dependencies]
async-std = "1.12.0"
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime", "attributes"] }
tikv-client = "0.2"
tokio = "1.33.0"

[lib]
crate-type = ["cdylib"]
name = "tikv_client"
